--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse--1136415712\testng-customsuite.xml</span>
+                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse-340861235\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.ninza.crm.campaigntest.CreateCampaignTest" class="method navigator-link" hash-for-method="createCamapignWithMandataoryFieldsTest">createCamapignWithMandataoryFieldsTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.ninza.crm.campaigntest.CreateCampaignTest" class="method navigator-link" hash-for-method="createCampaignWithExpectedCloseDateTest">createCampaignWithExpectedCloseDateTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.ninza.crm.producttest.CreateProductTest" class="method navigator-link" hash-for-method="createProductWithMandatoryFieldTest">createProductWithMandatoryFieldTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.ninza.crm.campaigntest.CreateCampaignTest</span>
+              <span class="class-name">com.ninza.crm.producttest.CreateProductTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createCamapignWithMandataoryFieldsTest">
-                  </a> <!-- createCamapignWithMandataoryFieldsTest -->
-                  <span class="method-name">createCamapignWithMandataoryFieldsTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="createCampaignWithExpectedCloseDateTest">
-                  </a> <!-- createCampaignWithExpectedCloseDateTest -->
-                  <span class="method-name">createCampaignWithExpectedCloseDateTest</span>
+                  <a name="createProductWithMandatoryFieldTest">
+                  </a> <!-- createProductWithMandatoryFieldTest -->
+                  <span class="method-name">createProductWithMandatoryFieldTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse--1136415712\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse-340861235\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.ninza.crm.campaigntest.CreateCampaignTest&quot;/&gt;
+      &lt;class name=&quot;com.ninza.crm.producttest.CreateProductTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,7 +173,7 @@
               <span class="test-group-name">Regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">createCampaignWithExpectedCloseDateTest</span>
+                <span class="method-in-group-name">createProductWithMandatoryFieldTest</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -193,7 +181,7 @@
               <span class="test-group-name">Smoke</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">createCamapignWithMandataoryFieldsTest</span>
+                <span class="method-in-group-name">createProductWithMandatoryFieldTest</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -213,20 +201,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createCamapignWithMandataoryFieldsTest')
-data.setCell(0, 2, 'com.ninza.crm.campaigntest.CreateCampaignTest')
-data.setCell(0, 3, 1907);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'createCampaignWithExpectedCloseDateTest')
-data.setCell(1, 2, 'com.ninza.crm.campaigntest.CreateCampaignTest')
-data.setCell(1, 3, 1666);
+data.setCell(0, 1, 'createProductWithMandatoryFieldTest')
+data.setCell(0, 2, 'com.ninza.crm.producttest.CreateProductTest')
+data.setCell(0, 3, 2202);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -252,58 +236,42 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.ninza.crm.campaigntest.CreateCampaignTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.ninza.crm.producttest.CreateProductTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">beforeSuite</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">39 ms</span>
+                <span class="method-start">26 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">BeforeTest</span>
-                <span class="method-start">1457 ms</span>
+                <span class="method-start">1306 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">1460 ms</span>
+                <span class="method-start">1309 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">createCamapignWithMandataoryFieldsTest</span>
-                <span class="method-start">3413 ms</span>
+                <span class="method-name">createProductWithMandatoryFieldTest</span>
+                <span class="method-start">3244 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">5323 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">BeforeTest</span>
-                <span class="method-start">6861 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">6863 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">createCampaignWithExpectedCloseDateTest</span>
-                <span class="method-start">8546 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethod</span>
-                <span class="method-start">10215 ms</span>
+                <span class="method-start">5448 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">11434 ms</span>
+                <span class="method-start">7374 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">11672 ms</span>
+                <span class="method-start">7549 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">11698 ms</span>
+                <span class="method-start">7577 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
